--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Purrista PH</title>
+  <title>Purrista PH | Contact</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -52,9 +52,9 @@
         <p><strong>Based in</strong><br>Pampanga, Philippines</p>
 
         <div class="social-icons">
-          <a href="#"><img src="facebook.png" alt="Facebook"></a>
-          <a href="#"><img src="instagram.png" alt="Instagram"></a>
-          <a href="#"><img src="twitter.png" alt="Twitter"></a>
+          <a href="#"><img src="assets/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="assets/instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="assets/twitter.png" alt="Twitter"></a>
         </div>
       </div>
     </div>
