--- a/tips.html
+++ b/tips.html
@@ -96,7 +96,7 @@
             <li><a href="cafe.html"><i class="fas fa-paw"></i><span>Cafés</span></a></li>
             <li><a href="tips.html" class="active"><i class="fas fa-lightbulb"></i><span>Tips</span></a></li> 
             <li><a href="about.html"><i class="fas fa-info-circle"></i><span>About</span></a></li>
-            <li><a href="#"><i class="fas fa-phone"></i><span>Contact</span></a></li>
+            <li><a href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a></li>
         </ul>
     </nav>
     
